--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Peacock</title>
-    <link rel="stylesheet" href="/css/platform.css">
+    <link rel="stylesheet" href="/css/index.css">
 </head>
 <body>
     <header>
@@ -16,25 +16,21 @@
             <h4>The Card</h4>
         </div>
     </header>
-
-
+    <aside>
+        <ul>
+            <li>Portfolio Build</li>
+            <li>Portfolio Cards</li>
+        </ul>
+    </aside>
     <main>
-        <h3>Select Platforms</h3>
-        <form action="/view/features.html" method="get">
-        <div class="checkbox-wrapper-41">
-            <!-- <input type="checkbox"> -->
-            <input type="checkbox" name="platform" value="github"> GitHub<br>
-            <input type="checkbox" name="platform" value="leetcode"> LeetCode<br>
-            <!-- <input type="checkbox" name="platform" value="geeksforgeeks"> GeeksforGeeks<br>
-            <input type="checkbox" name="platform" value="hackerrank"> HackerRank<br> -->
-            <button type="submit">Next</button>
+        <div id="content">
+            <h1>Portfolios and Cards, the all new way</h1>
+            <h1>Coder's Solution</h1>
         </div>
-        </form>
-
-
-                    
+        <div id="wwdo">
+            <h1><a href="">What we do?</a></h1>
+        </div>
     </main>
     <footer></footer>
 </body>
-<script src="/js/home.js"></script>
 </html>
