index page updated

--- a/index.html
+++ b/index.html
@@ -10,27 +10,46 @@
     <header>
         <div id="imagi">
             <img src="/images/peacock 2.svg" alt="peacock project">
-        </div>
-        <div id="headText">
-            <h1>Peacock</h1>
-            <h4>The Card</h4>
+            <p>Peacock</p>
+            <!-- <h2>Card</h2> -->
         </div>
     </header>
-    <aside>
-        <ul>
-            <li>Portfolio Build</li>
-            <li>Portfolio Cards</li>
-        </ul>
-    </aside>
     <main>
-        <div id="content">
-            <h1>Portfolios and Cards, the all new way</h1>
-            <h1>Coder's Solution</h1>
-        </div>
-        <div id="wwdo">
-            <h1><a href="">What we do?</a></h1>
+        <!-- <h2>Tune in</h2> -->
+        <div id="cards">
+            <a href="">
+                <div id="card1">
+                    <h2>Build Portfolio</h2>
+                    <p>To showcase</p>
+                    &RightArrow;
+                    &circledcirc;
+                </div>
+            </a>
+            <a href="/view/platform.html">
+                <div id="card1">
+                    <h2>Portfolio cards <sup><small><small><small>(working)</small></small></small></sup></h2>
+                    <p>To showcase</p>
+                    &RightArrow;
+                </div>
+            </a>
+            <a href="">
+                <div id="card1">
+                    <h2>Customised Portfolio</h2>
+                    <p>To showcase</p>
+                    &RightArrow;
+                </div>
+            </a>
+            <a href="">
+                <div id="card1">
+                    <h2>Layouts</h2>
+                    <p>To showcase</p>
+                    &RightArrow;
+                </div>
+            </a>
         </div>
     </main>
-    <footer></footer>
+    <footer>
+        <h4>&copy; Peacock Products - 2024</h4>
+    </footer>
 </body>
 </html>
